[project]
name = "langchain1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "langchain>=0.2.0",
    "langchain-openai>=0.1.0",
    "langchain-community>=0.1.0",
    "langchain-google-genai>=0.1.0",
    "langchain-groq>=0.1.0",
    "python-dotenv>=1.0.0",
    "ipykernel>=7.2.0",
]
